# BS_MC_pricer

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: demo_compare.py  plot_convergence.py
src/bs_pricer/: __init__.py  black_scholes.py  monte_carlo.py  utils.py
tests/: test_black_scholes.py
