[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bs-mc-pricer"
version = "0.1.0"
description = "Educational Black–Scholes vs Monte Carlo pricer"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-q"
